Upgrade to patternfly 2020.11

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,6 +10,7 @@ html, body, #root {
 */
 .pf-c-page__header-nav {
   align-self: auto;
+  background-color: transparent;
 }
 
 .horizontally-scrollable {
