--- a/src/app/app.css
+++ b/src/app/app.css
@@ -24,3 +24,12 @@ html, body, #root {
 .patternfly-text-gray {
   color: var(--pf-global--Color--200);
 }
+.table-with-max-cell-width {
+  table-layout: auto;
+  --pf-c-table--cell--MaxWidth: 200px;
+}
+@media screen and (max-width: 1440px) {
+  .card-wrapper {
+    width: fit-content;
+  }
+}
