--- a/src/app/app.css
+++ b/src/app/app.css
@@ -43,3 +43,9 @@ body,
 .pf-c-page {
   --pf-c-page__main-breadcrumb--PaddingBottom: var(--pf-global--spacer--md);
 }
+.only-on-hover-container:hover > .only-on-hover-visible {
+  opacity: 1;
+}
+.only-on-hover-visible {
+  opacity: 0;
+}
