--- a/src/app/app.css
+++ b/src/app/app.css
@@ -44,3 +44,35 @@ body,
 .only-on-hover-visible {
   opacity: 0;
 }
+
+.progress-stacked {
+  background-color:var(--pf-global--BackgroundColor--100);
+  color: var(--pf-global--palette--black-100);
+  box-sizing: initial;
+  font-size: var(--pf-global--FontSize--md);
+  height: var(--pf-c-progress__indicator--Height);
+  line-height: var(--pf-c-progress__indicator--Height);
+  margin: 6px 0;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+.progress-stacked > span {
+  background-color: var(--pf-global--primary-color--100);
+  color: var(--pf-global--palette--black-100);
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+  width: auto;
+  vertical-align: top;
+}
+.progress-stacked > .progress-success {
+  background-color: var(--pf-global--success-color--100);
+}
+.progress-stacked > .progress-failure {
+  background-color: var(--pf-global--danger-color--100);
+}
+.progress-stacked > .progress-empty {
+  opacity: .2;
+  width: 100%;
+}
