Add paging, sorting and filtering to the events view

--- a/src/UI/App/app.css
+++ b/src/UI/App/app.css
@@ -81,5 +81,13 @@ body,
   background-color: var(--pf-global--palette--black-200);
 }
 .error-transition {
-  background-color: var(--pf-global--palette--orange-100);
+  background-color: var(--pf-global--palette--gold-50);
 }
+
+.page-size-selector-icon {
+  align-self: center;
+  width: auto;
+  padding-left: var(--pf-global--spacer--sm);
+  margin-left: auto;
+  font-size: var(--pf-global--icon--FontSize--sm);
+  color: var(--pf-global--active-color--100); }
