--- a/src/UI/App/app.css
+++ b/src/UI/App/app.css
@@ -25,10 +25,14 @@ body,
 
 .patternfly-text-gray {
   color: var(--pf-global--Color--200);
+  font-weight: 400;
 }
 .table-with-max-cell-width {
   table-layout: auto;
   --pf-c-table--cell--MaxWidth: 200px;
+}
+.patternfly-default-link-color {
+  color: var(--pf-global--link--Color);
 }
 
 /*
